# mumblebot

./: .gitignore  Cargo.toml  README.md  build.rs  config.json.example
src/: main.rs  net.rs  sound.rs  types.rs  youtube.rs
src/spotify/: mod.rs  resampling_sink.rs
